--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
   },
   "dependencies": {
     "@microsoft/api-extractor": "^7.12.0",
+    "@types/better-sqlite3": "^5.4.1",
+    "better-sqlite3": "^7.1.2",
     "cmake-js": "^6.1.0",
     "node-addon-api": "^3.0.2",
     "prebuild-install": "^6.0.0",
